# ros_cuda_cxx_projects

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh
cuda_demo/: CMakeLists.txt  build.sh  cam_client.py  cuda_edge.cu  cuda_test.cu  edge_processor.cpp  image_viewer.cpp
ros2_demo/: .clangd  compile_commands.json
ros2_demo/src/scheduler/: CMakeLists.txt  build.sh  scheduler_design.md
ros2_demo/src/scheduler/include/scheduler/: frame.h  scheduler.h  task.h  task_runner.h
ros2_demo/src/scheduler/src/: frame.cpp  scheduler.cpp  task.cpp  task_runner.cpp
ros2_demo/src/scheduler/test/: test_advanced.cpp  test_main.cpp
ros2_demo/src/talker_listener/: CMakeLists.txt  package.xml
ros2_demo/src/talker_listener/src/: listener.cpp  talker.cpp
rust_demo/src/: _01_ownership.rs  _02_concurrency.rs  _03_std_components.rs  _04_trait.rs  _05_generic.rs  _06_pattern_matching.rs  _07_closure.rs  _08_smart_pointer.rs  _09_async.rs  _10_error_handling.rs  _11_macro.rs  _12_testing.rs  _13_networking.rs  _14_logging.rs  _15_ffi.rs  _16_cargo.rs  _17_unsafe.rs  main.rs
test/: cuda_edge_processor.py  mediapipe_pose.py
